@@ -1,3 +1,8 @@
+Tue Nov 11 23:39:30 CET 2008 Christian Anthon <anthon@kiku.dk>
+
+	* gnubg.c, gtkboard.c, gtkboard.h: fix two minor bugs causing crashes
+	on closing
+
 Tue Nov 11 11:59:52 CET 2008 Christian Anthon <anthon@kiku.dk>
 
 	* backgammon.h, eval.c, eval.h, play.c: Evaluate accept resign at
